# seshat

./: .gitignore  README.md  pyproject.toml  run_digest.sh
digest/: config.py  errors.py  llm.py
digest/arxiv/: convert.py  fetch.py
digest/kb/: cli.py  store.py
digest/kb/prompts/: paper_summary.md
digest/pipeline/: format.py  run.py  score.py
digest/pipeline/prompts/: prompt_filter_score.md
docs/: CHANGELOG.md  DESIGN.md  LAUNCHD_SETUP.md  ROADMAP.md  TESTING.md
tests/: conftest.py  test_arxiv_convert.py  test_config.py  test_errors.py  test_llm.py  test_store.py
vault_chat/: chat.py
webapp/: app.py  index.html  run.py
