[project]
name = "seshat"
version = "0.1.0"
description = "Personal knowledge base with arXiv paper digest and LLM agent"
requires-python = ">=3.12"
dependencies = [
    "marker-pdf>=1.10.2",
    "ollama>=0.6.1",
    "requests>=2.33.1",
    "anthropic>=0.46.0",
    "chromadb>=0.6.0",
    "sentence-transformers>=3.0.0",
    "langchain-chroma>=0.1.0",
    "langchain-huggingface>=0.1.0",
    "langchain-text-splitters>=0.3.0",
]

[tool.setuptools.packages.find]
include = ["digest*", "vault_chat*"]

[project.scripts]
run-digest  = "digest.pipeline.run:main"
convert-pdf = "digest.arxiv.convert:main"
vault-chat  = "vault_chat.chat:main"
kb          = "digest.kb.cli:main"
